# nafparserpy

./: .gitignore  CONTRIBUTING.md  Changelog.md  LICENSE  MANIFEST.in  README.md  USAGE.md  naf_changelog.md  naf_comments.md  naf_v3.2.1.dtd  naf_v3.3.a.dtd  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: naf.yml
docs/: USAGE.md  index.html  parser.html
docs/layers/: attribution.html  attribution.md  causal_relations.html  chunks.html  chunks.md  constituency.html  coreferences.html  deps.html  deps.md  elements.html  entities.html  entities.md  factory.html  factualities.html  factualities.md  index.html  index.md  locations_dates.html  markables.html  multiwords.html  multiwords.md  naf_header.html  naf_header.md  opinions.html  opinions.md  raw.html  raw.md  srl.html  srl.md  temporal_relations.html  temporal_relations.md  terms.html  text.html  text.md  time_expressions.html  topics.html  tunits.html  utils.html  utils.md
docs/nafparserpy/: index.html  index.md  parser.html  parser.md
naf_development_doc/: comments_and_todos.md  naf_3.3_spec_changes.md  naf_changelog.md
nafparserpy/: __init__.py  parser.py  utils.py
nafparserpy/classes/: attribution.py  causal_relations.py  chunks.py  constituency.py  coreferences.py  deps.py  entities.py  factualities.py  markables.py  multiwords.py  naf_header.py  opinions.py  raw.py  span.py  srl.py  temporal_relations.py  terms.py  text.py  time_expressions.py  topics.py  tunits.py
tests/: test_add_etree_element.py  test_coreference_file.py  test_elements.py  test_example.py  test_parser_layers.py  test_validation.py
tests/data/: lpdep.naf  (+1 more)
(+75 files in other folders)
