[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nafparserpy"
version = "0.3.1"
description = "lxml wrapper for NAF"
authors = [
    {name = "Sophie Arnoult"},
    {email = "s.i.arnoult@vu.nl"}
]
maintainers = [
    {name = "Sophie Arnoult"},
    {email = "s.i.arnoult@vu.nl"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License"
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["lxml"]
license = {text = "Apache License 2.0"}

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
documentation = "https://cltl.github.io/nafparserpy/"
repository = "https://github.com/cltl/nafparserpy"
changelog = "https://github.com/cltl/nafparserpy/blob/main/Changelog.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]