[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cltl/nafparserpy
project_urls =
    Bug Tracker = https://github.com/cltl/nafparserpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License 2.0
    Intended Audience :: Developers
license = Apache License 2.0
license_file = LICENSE

[options]
package_dir =
    = src
packages = find:
tests_require = pytest
include_package_data = True
python_requires = >=3.7

[options.packages.find]
where = src